dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: history-api-server
  labels:
    app: history-api-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: history-api-server
  template:
    metadata:
      labels:
        app: history-api-server
    spec:
      imagePullSecrets:
        - name: facegram-registery
      containers:
        - name: history-api-server
          image: cr.fcgm.dev/facegram/history-service:00b338e8
          ports:
            - containerPort: 8080
            - containerPort: 30014
